// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-document should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-document should update a document 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`update-document should update document with properties 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
